crates/rx-macro/src/snapshots/rx_macro__expand_nest.snap
---
source: crates/rx-macro/src/lib.rs
expression: "prettyplease::unparse(&syntax_tree)"
---
pub struct MyStructRx {
    pub d: <RxVec<i32> as rx_derive::MakeRx>::Rx,
}
impl From<MyStructRx> for MyStruct {
    fn from(value: MyStructRx) -> MyStruct {
        use rx_derive::MakeUnrx;
        value.make_unrx()
    }
}
impl From<MyStruct> for MyStructRx {
    fn from(value: MyStruct) -> MyStructRx {
        use rx_derive::MakeRx;
        value.make_rx()
    }
}
impl rx_derive::MakeRx for MyStruct {
    type Rx = MyStructRx;
    fn make_rx(self) -> Self::Rx {
        use rx_derive::MakeRx;
        Self::Rx { d: self.d.make_rx() }
    }
}
impl rx_derive::MakeUnrx for MyStructRx {
    type Unrx = MyStruct;
    fn make_unrx(self) -> Self::Unrx {
        use rx_derive::MakeUnrx;
        Self::Unrx {
            d: self.d.make_unrx(),
        }
    }
}

